Fixed contact modal being grayed out by adding really large z-index.

--- a/main/about.css
+++ b/main/about.css
@@ -313,6 +313,7 @@ body {
   
   
   .masthead {
+  	z-index: 999999999;
     position: fixed;
     top: 0;
   }
